# npchat

./: .env  .gitignore  01_build_app.sh  02_pack_runtime.sh  03_deploy.sh  03_run_prod.sh  CMakeLists.txt  README.md  build.sh  certs  common.shi  configure.sh  docker_run.sh  fix_ident.sh  gen_stubs.sh  run.sh
.github/: copilot-instructions.md
client/: .env.example  .gitignore  CMakeLists.txt  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.svelte  App.svelte.backup  App_corrected.svelte  main.ts  nprpc.ts
client/src/lib/: Router.svelte.ts
client/src/lib/components/: ChatApp.svelte  ChatList.svelte  ChatRoom.svelte  ContactList.svelte  ContextMenu.svelte  LanguageSelector.svelte  LoginForm.svelte  RegisterForm.svelte  VideoPlayer.svelte  WebRTCCall.svelte
client/src/lib/config/: webrtc.ts
client/src/lib/i18n/: index.ts
client/src/lib/rpc/: index.ts
client/src/lib/utils/: shakaLoader.ts
doc/: ABOUT_TIMESTAMPS.md
docker/: Dockerfile.dev  Dockerfile.runtime
docker/scripts/: collect_boost.sh
idl/: npchat.npidl
sample_data/: npchat.sqlite3
server/: CMakeLists.txt
server/src/: main.cpp
server/src/database/: schema.sql
server/src/services/client/: ChatObserver.hpp  DataObserver.hpp  Observer.hpp
server/src/services/db/: AuthService.cpp  AuthService.hpp  CalculationService.hpp  ChatService.cpp  ChatService.hpp  ContactService.cpp  ContactService.hpp  Database.hpp  FertilizerService.hpp  MessageService.cpp  MessageService.hpp  SolutionService.hpp  WebRTCService.cpp  WebRTCService.hpp
server/src/services/objects/: Authorizator.cpp  Chat.hpp
server/src/services/rpc/: Authorizator.cpp  Authorizator.hpp  RegisteredUser.cpp  RegisteredUser.hpp
server/src/services/rpc/example/: Authorizator.hpp  Calculator.hpp  RegisteredUser.hpp
server/src/util/: HostJsonBuilder.hpp  HostJsonExample.cpp  HostJsonMacroSimple.hpp  HostJsonMacros.hpp  util.hpp
(+11 files in other folders)
